@@ -1,5 +1,8 @@
 Date	Added
 
+2007/04/23
+	* Debuff on logout&2 is again set to default, instead of removing food
+	  bonuses now it removes Maximize Power, Maximum Overthrust and Steel Body.
 2007/04/16
 	* Changed the default setting for emergency_call to 11 (usable all the
 	  time, but only in Gvg Maps) as described by Tharis (skill.conf). [Skotlex]
